--- a/archives/toutiao-search/2023-10-08.md
+++ b/archives/toutiao-search/2023-10-08.md
@@ -1,61 +1,80 @@
 # 2023-10-08
 
-共 285 条
+共 301 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Oct 08 2023 20:00:42 GMT+0800 (China Standard Time) -->
-1. [委员建议消除罪犯子女考公限制](https://so.toutiao.com/search?keyword=委员建议消除罪犯子女考公限制)
-1. [摄像头正对举报箱 工作人员回应](https://so.toutiao.com/search?keyword=摄像头正对举报箱+工作人员回应)
+<!-- 最后更新时间 Sun Oct 08 2023 21:01:47 GMT+0800 (China Standard Time) -->
+1. [杭州亚运会闭幕式](https://so.toutiao.com/search?keyword=杭州亚运会闭幕式)
+1. [旗手谢震业高举国旗入场](https://so.toutiao.com/search?keyword=旗手谢震业高举国旗入场)
 1. [亚运村里的“中国风”](https://so.toutiao.com/search?keyword=亚运村里的“中国风”)
+1. [李盈莹因膝盖不能弯曲下不了领奖台](https://so.toutiao.com/search?keyword=李盈莹因膝盖不能弯曲下不了领奖台)
 1. [以导弹瞬间夷平巴勒斯坦塔画面曝光](https://so.toutiao.com/search?keyword=以导弹瞬间夷平巴勒斯坦塔画面曝光)
 1. [上海女童网红海滩失踪事件搜救疑团](https://so.toutiao.com/search?keyword=上海女童网红海滩失踪事件搜救疑团)
+1. [闭幕式全场观众高歌《亚洲雄风》](https://so.toutiao.com/search?keyword=闭幕式全场观众高歌《亚洲雄风》)
 1. [女司机撞倒行人掏卫生巾为对方止血](https://so.toutiao.com/search?keyword=女司机撞倒行人掏卫生巾为对方止血)
-1. [家长曝光校服质量差：里面全是碎布条](https://so.toutiao.com/search?keyword=家长曝光校服质量差：里面全是碎布条)
-1. [美媒：制造业西迁中国内陆而非印度](https://so.toutiao.com/search?keyword=美媒：制造业西迁中国内陆而非印度)
-1. [湖南沅江发生车祸致3死不实](https://so.toutiao.com/search?keyword=湖南沅江发生车祸致3死不实)
-1. [巴以冲突对A股影响几何](https://so.toutiao.com/search?keyword=巴以冲突对A股影响几何)
-1. [以总理：出动全部力量摧毁哈马斯](https://so.toutiao.com/search?keyword=以总理：出动全部力量摧毁哈马斯)
-1. [以色列少将被哈马斯武装人员俘虏](https://so.toutiao.com/search?keyword=以色列少将被哈马斯武装人员俘虏)
-1. [网传傅艺伟30岁儿子高乐男去世](https://so.toutiao.com/search?keyword=网传傅艺伟30岁儿子高乐男去世)
+1. [纪委通报官员强制商家换拼音招牌](https://so.toutiao.com/search?keyword=纪委通报官员强制商家换拼音招牌)
+1. [河南龙头房企否认破产传闻](https://so.toutiao.com/search?keyword=河南龙头房企否认破产传闻)
 1. [以色列遭大规模火箭弹袭击视频曝光](https://so.toutiao.com/search?keyword=以色列遭大规模火箭弹袭击视频曝光)
-1. [中国留学生拍下以色列遭袭时画面](https://so.toutiao.com/search?keyword=中国留学生拍下以色列遭袭时画面)
-1. [外媒：以色列街头空无一人](https://so.toutiao.com/search?keyword=外媒：以色列街头空无一人)
-1. [以色列和巴勒斯坦的世仇是怎么来的](https://so.toutiao.com/search?keyword=以色列和巴勒斯坦的世仇是怎么来的)
 1. [以色列此次遇袭为何伤亡惨重](https://so.toutiao.com/search?keyword=以色列此次遇袭为何伤亡惨重)
-1. [货车停放10多天司机被发现早已身亡](https://so.toutiao.com/search?keyword=货车停放10多天司机被发现早已身亡)
+1. [以色列少将被哈马斯武装人员俘虏](https://so.toutiao.com/search?keyword=以色列少将被哈马斯武装人员俘虏)
+1. [以总理：出动全部力量摧毁哈马斯](https://so.toutiao.com/search?keyword=以总理：出动全部力量摧毁哈马斯)
+1. [中国留学生拍下以色列遭袭时画面](https://so.toutiao.com/search?keyword=中国留学生拍下以色列遭袭时画面)
+1. [以色列和巴勒斯坦的世仇是怎么来的](https://so.toutiao.com/search?keyword=以色列和巴勒斯坦的世仇是怎么来的)
 1. [哈马斯：突袭以色列得到伊朗支持](https://so.toutiao.com/search?keyword=哈马斯：突袭以色列得到伊朗支持)
-1. [中国工人抓拍到以军铁穹拦截火箭弹](https://so.toutiao.com/search?keyword=中国工人抓拍到以军铁穹拦截火箭弹)
-1. [在以华人：近距离听到火箭弹袭击](https://so.toutiao.com/search?keyword=在以华人：近距离听到火箭弹袭击)
+1. [老鼠回来发现家被偷了](https://so.toutiao.com/search?keyword=老鼠回来发现家被偷了)
+1. [网传傅艺伟30岁儿子高乐男去世](https://so.toutiao.com/search?keyword=网传傅艺伟30岁儿子高乐男去世)
+1. [哈马斯武装占领以军基地缴获装甲车](https://so.toutiao.com/search?keyword=哈马斯武装占领以军基地缴获装甲车)
+1. [外媒：以色列街头空无一人](https://so.toutiao.com/search?keyword=外媒：以色列街头空无一人)
+1. [情报强大的以色列为何“失明”了](https://so.toutiao.com/search?keyword=情报强大的以色列为何“失明”了)
+1. [美媒：制造业西迁中国内陆而非印度](https://so.toutiao.com/search?keyword=美媒：制造业西迁中国内陆而非印度)
+1. [欧盟总部大楼点亮以色列国旗](https://so.toutiao.com/search?keyword=欧盟总部大楼点亮以色列国旗)
+1. [货车停放10多天司机被发现早已身亡](https://so.toutiao.com/search?keyword=货车停放10多天司机被发现早已身亡)
 1. [媒体：以色列局势“史无前例”](https://so.toutiao.com/search?keyword=媒体：以色列局势“史无前例”)
+1. [巴以冲突对A股影响几何](https://so.toutiao.com/search?keyword=巴以冲突对A股影响几何)
+1. [女子失联半个多月后遗体在河里找到](https://so.toutiao.com/search?keyword=女子失联半个多月后遗体在河里找到)
+1. [银行回应“不扫码不给办业务”](https://so.toutiao.com/search?keyword=银行回应“不扫码不给办业务”)
+1. [厄瓜多尔总统撤换安全高官](https://so.toutiao.com/search?keyword=厄瓜多尔总统撤换安全高官)
+1. [狗狗误食3斤泡酒的杨梅醉倒](https://so.toutiao.com/search?keyword=狗狗误食3斤泡酒的杨梅醉倒)
+1. [画家史国良对话朝鲜功勋艺术家](https://so.toutiao.com/search?keyword=画家史国良对话朝鲜功勋艺术家)
+1. [WTT兰州站：孙颖莎获女单冠军](https://so.toutiao.com/search?keyword=WTT兰州站：孙颖莎获女单冠军)
+1. [全红婵一口气回答31个问题](https://so.toutiao.com/search?keyword=全红婵一口气回答31个问题)
+1. [台女大学生因质问赖清德弊案遭网暴](https://so.toutiao.com/search?keyword=台女大学生因质问赖清德弊案遭网暴)
+1. [中国银行：坚决拥护中央处分刘连舸](https://so.toutiao.com/search?keyword=中国银行：坚决拥护中央处分刘连舸)
+1. [谢震业：为中国田径事业责无旁贷](https://so.toutiao.com/search?keyword=谢震业：为中国田径事业责无旁贷)
+1. [李子柒商业版图盘点](https://so.toutiao.com/search?keyword=李子柒商业版图盘点)
+1. [杭州会申办奥运会吗？官方回应](https://so.toutiao.com/search?keyword=杭州会申办奥运会吗？官方回应)
+1. [《问心》有哪些看点](https://so.toutiao.com/search?keyword=《问心》有哪些看点)
+1. [中国工人抓拍到以军铁穹拦截火箭弹](https://so.toutiao.com/search?keyword=中国工人抓拍到以军铁穹拦截火箭弹)
+1. [救援专家披露蓝天救援队内部分裂问题](https://so.toutiao.com/search?keyword=救援专家披露蓝天救援队内部分裂问题)
+1. [执法局大队长被曝婚内出轨 纪委调查](https://so.toutiao.com/search?keyword=执法局大队长被曝婚内出轨+纪委调查)
+1. [女子帮离世闺蜜照护女儿14年](https://so.toutiao.com/search?keyword=女子帮离世闺蜜照护女儿14年)
+1. [研究称人造子宫人体试验或将启动](https://so.toutiao.com/search?keyword=研究称人造子宫人体试验或将启动)
+1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
+1. [螃蟹卡套路有多深](https://so.toutiao.com/search?keyword=螃蟹卡套路有多深)
+1. [摄像头正对举报箱 工作人员回应](https://so.toutiao.com/search?keyword=摄像头正对举报箱+工作人员回应)
+1. [姆巴佩在社媒祝贺李刚仁亚运会夺金](https://so.toutiao.com/search?keyword=姆巴佩在社媒祝贺李刚仁亚运会夺金)
+1. [韩国瑜会是促成蓝白合的关键先生吗](https://so.toutiao.com/search?keyword=韩国瑜会是促成蓝白合的关键先生吗)
+1. [委员建议消除罪犯子女考公限制](https://so.toutiao.com/search?keyword=委员建议消除罪犯子女考公限制)
+1. [家长曝光校服质量差：里面全是碎布条](https://so.toutiao.com/search?keyword=家长曝光校服质量差：里面全是碎布条)
+1. [湖南沅江发生车祸致3死不实](https://so.toutiao.com/search?keyword=湖南沅江发生车祸致3死不实)
+1. [在以华人：近距离听到火箭弹袭击](https://so.toutiao.com/search?keyword=在以华人：近距离听到火箭弹袭击)
 1. [韩旭本赛季不再返回纽约自由人](https://so.toutiao.com/search?keyword=韩旭本赛季不再返回纽约自由人)
 1. [纪委回应女子举报海南执法队长出轨](https://so.toutiao.com/search?keyword=纪委回应女子举报海南执法队长出轨)
 1. [目前无中国公民在阿富汗地震中伤亡](https://so.toutiao.com/search?keyword=目前无中国公民在阿富汗地震中伤亡)
 1. [放贷给恒大的银行高管会被处罚吗](https://so.toutiao.com/search?keyword=放贷给恒大的银行高管会被处罚吗)
-1. [李盈莹因膝盖不能弯曲下不了领奖台](https://so.toutiao.com/search?keyword=李盈莹因膝盖不能弯曲下不了领奖台)
 1. [普京71岁生日亲自给两国总统当司机](https://so.toutiao.com/search?keyword=普京71岁生日亲自给两国总统当司机)
-1. [杭州会申办奥运会吗？官方回应](https://so.toutiao.com/search?keyword=杭州会申办奥运会吗？官方回应)
 1. [今天21时16分寒露](https://so.toutiao.com/search?keyword=今天21时16分寒露)
 1. [男子攀爬大禹像被拽下后遭怒踹](https://so.toutiao.com/search?keyword=男子攀爬大禹像被拽下后遭怒踹)
-1. [狗狗误食3斤泡酒的杨梅醉倒](https://so.toutiao.com/search?keyword=狗狗误食3斤泡酒的杨梅醉倒)
-1. [欧盟总部大楼点亮以色列国旗](https://so.toutiao.com/search?keyword=欧盟总部大楼点亮以色列国旗)
-1. [救援专家披露蓝天救援队内部分裂问题](https://so.toutiao.com/search?keyword=救援专家披露蓝天救援队内部分裂问题)
 1. [杭州亚运会纪念短片：谢谢你杭州](https://so.toutiao.com/search?keyword=杭州亚运会纪念短片：谢谢你杭州)
-1. [银行回应“不扫码不给办业务”](https://so.toutiao.com/search?keyword=银行回应“不扫码不给办业务”)
 1. [惠若琪：中国女排非常需要这个冠军](https://so.toutiao.com/search?keyword=惠若琪：中国女排非常需要这个冠军)
 1. [寒露脚不露的真实原因](https://so.toutiao.com/search?keyword=寒露脚不露的真实原因)
 1. [俄“海燕”核动力导弹为何让美忌惮](https://so.toutiao.com/search?keyword=俄“海燕”核动力导弹为何让美忌惮)
-1. [情报强大的以色列为何“失明”了](https://so.toutiao.com/search?keyword=情报强大的以色列为何“失明”了)
-1. [执法局大队长被曝婚内出轨 纪委调查](https://so.toutiao.com/search?keyword=执法局大队长被曝婚内出轨+纪委调查)
 1. [巴以冲突将如何影响大宗商品](https://so.toutiao.com/search?keyword=巴以冲突将如何影响大宗商品)
 1. [阿富汗地震死亡超2000人](https://so.toutiao.com/search?keyword=阿富汗地震死亡超2000人)
-1. [谢震业：为中国田径事业责无旁贷](https://so.toutiao.com/search?keyword=谢震业：为中国田径事业责无旁贷)
-1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
 1. [杭州机场可提前一天办行李托运手续](https://so.toutiao.com/search?keyword=杭州机场可提前一天办行李托运手续)
 1. [海滩女童消失谁应为此负责](https://so.toutiao.com/search?keyword=海滩女童消失谁应为此负责)
 1. [物业回应小区保安大爷手摇抬车杆](https://so.toutiao.com/search?keyword=物业回应小区保安大爷手摇抬车杆)
-1. [螃蟹卡套路有多深](https://so.toutiao.com/search?keyword=螃蟹卡套路有多深)
 1. [西安重大刑案嫌犯被抓](https://so.toutiao.com/search?keyword=西安重大刑案嫌犯被抓)
-1. [河南龙头房企否认破产传闻](https://so.toutiao.com/search?keyword=河南龙头房企否认破产传闻)
 1. [哈马斯公布抓获以色列人视频](https://so.toutiao.com/search?keyword=哈马斯公布抓获以色列人视频)
 1. [曝多名以色列女兵被哈马斯带到加沙](https://so.toutiao.com/search?keyword=曝多名以色列女兵被哈马斯带到加沙)
 1. [哈马斯与以色列国防军交手现场曝光](https://so.toutiao.com/search?keyword=哈马斯与以色列国防军交手现场曝光)
@@ -73,7 +92,6 @@
 1. [上海蓝天救援队回应中止搜救](https://so.toutiao.com/search?keyword=上海蓝天救援队回应中止搜救)
 1. [亚奥理事会给杭州亚运会打99分](https://so.toutiao.com/search?keyword=亚奥理事会给杭州亚运会打99分)
 1. [快餐店男顾客殴打女店员？警方回应](https://so.toutiao.com/search?keyword=快餐店男顾客殴打女店员？警方回应)
-1. [女子失联半个多月后遗体在河里找到](https://so.toutiao.com/search?keyword=女子失联半个多月后遗体在河里找到)
 1. [哈马斯与以色列要打多久](https://so.toutiao.com/search?keyword=哈马斯与以色列要打多久)
 1. [WTT兰州站：王楚钦晋级男单决赛](https://so.toutiao.com/search?keyword=WTT兰州站：王楚钦晋级男单决赛)
 1. [海事部门已对走失女童开展搜救](https://so.toutiao.com/search?keyword=海事部门已对走失女童开展搜救)
@@ -83,7 +101,6 @@
 1. [中国香港代表团8金16银29铜收官](https://so.toutiao.com/search?keyword=中国香港代表团8金16银29铜收官)
 1. [巴以冲突是否有“解”](https://so.toutiao.com/search?keyword=巴以冲突是否有“解”)
 1. [刘清漪：夺金是最好的成人礼](https://so.toutiao.com/search?keyword=刘清漪：夺金是最好的成人礼)
-1. [中国银行：坚决拥护中央处分刘连舸](https://so.toutiao.com/search?keyword=中国银行：坚决拥护中央处分刘连舸)
 1. [以军宣布在加沙地带设“军事禁区”](https://so.toutiao.com/search?keyword=以军宣布在加沙地带设“军事禁区”)
 1. [俄媒：俄团体为普京准备生日礼物](https://so.toutiao.com/search?keyword=俄媒：俄团体为普京准备生日礼物)
 1. [孩子丢了家长第一时间该怎么办](https://so.toutiao.com/search?keyword=孩子丢了家长第一时间该怎么办)
@@ -94,7 +111,6 @@
 1. [以色列一家人被哈马斯武装控制](https://so.toutiao.com/search?keyword=以色列一家人被哈马斯武装控制)
 1. [25省双节旅游成绩单：河南揽客居首](https://so.toutiao.com/search?keyword=25省双节旅游成绩单：河南揽客居首)
 1. [2024年“欢乐春节”吉祥物正式亮相](https://so.toutiao.com/search?keyword=2024年“欢乐春节”吉祥物正式亮相)
-1. [台女大学生因质问赖清德弊案遭网暴](https://so.toutiao.com/search?keyword=台女大学生因质问赖清德弊案遭网暴)
 1. [联合国驻黎临时部队呼吁各方克制](https://so.toutiao.com/search?keyword=联合国驻黎临时部队呼吁各方克制)
 1. [女童海中玩耍 好心人守护10分钟](https://so.toutiao.com/search?keyword=女童海中玩耍+好心人守护10分钟)
 1. [以色列前总理入伍成为预备役军人](https://so.toutiao.com/search?keyword=以色列前总理入伍成为预备役军人)
