--- a/archives/toutiao-search/2023-10-08.md
+++ b/archives/toutiao-search/2023-10-08.md
@@ -1,56 +1,81 @@
 # 2023-10-08
 
-共 301 条
+共 321 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Oct 08 2023 21:01:47 GMT+0800 (China Standard Time) -->
-1. [杭州亚运会闭幕式](https://so.toutiao.com/search?keyword=杭州亚运会闭幕式)
-1. [旗手谢震业高举国旗入场](https://so.toutiao.com/search?keyword=旗手谢震业高举国旗入场)
-1. [亚运村里的“中国风”](https://so.toutiao.com/search?keyword=亚运村里的“中国风”)
-1. [李盈莹因膝盖不能弯曲下不了领奖台](https://so.toutiao.com/search?keyword=李盈莹因膝盖不能弯曲下不了领奖台)
-1. [以导弹瞬间夷平巴勒斯坦塔画面曝光](https://so.toutiao.com/search?keyword=以导弹瞬间夷平巴勒斯坦塔画面曝光)
-1. [上海女童网红海滩失踪事件搜救疑团](https://so.toutiao.com/search?keyword=上海女童网红海滩失踪事件搜救疑团)
-1. [闭幕式全场观众高歌《亚洲雄风》](https://so.toutiao.com/search?keyword=闭幕式全场观众高歌《亚洲雄风》)
+<!-- 最后更新时间 Sun Oct 08 2023 22:00:44 GMT+0800 (China Standard Time) -->
+1. [杭州第19届亚运会正式闭幕](https://so.toutiao.com/search?keyword=杭州第19届亚运会正式闭幕)
 1. [女司机撞倒行人掏卫生巾为对方止血](https://so.toutiao.com/search?keyword=女司机撞倒行人掏卫生巾为对方止血)
-1. [纪委通报官员强制商家换拼音招牌](https://so.toutiao.com/search?keyword=纪委通报官员强制商家换拼音招牌)
+1. [201金收官 创造历史](https://so.toutiao.com/search?keyword=201金收官+创造历史)
+1. [以色列正式向哈马斯宣战](https://so.toutiao.com/search?keyword=以色列正式向哈马斯宣战)
+1. [准新娘长发被理发师剪至齐肩索赔8500](https://so.toutiao.com/search?keyword=准新娘长发被理发师剪至齐肩索赔8500)
+1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
+1. [李盈莹因膝盖不能弯曲下不了领奖台](https://so.toutiao.com/search?keyword=李盈莹因膝盖不能弯曲下不了领奖台)
+1. [女子失联半个多月后遗体在河里找到](https://so.toutiao.com/search?keyword=女子失联半个多月后遗体在河里找到)
+1. [寒露脚不露的真实原因](https://so.toutiao.com/search?keyword=寒露脚不露的真实原因)
 1. [河南龙头房企否认破产传闻](https://so.toutiao.com/search?keyword=河南龙头房企否认破产传闻)
 1. [以色列遭大规模火箭弹袭击视频曝光](https://so.toutiao.com/search?keyword=以色列遭大规模火箭弹袭击视频曝光)
 1. [以色列此次遇袭为何伤亡惨重](https://so.toutiao.com/search?keyword=以色列此次遇袭为何伤亡惨重)
-1. [以色列少将被哈马斯武装人员俘虏](https://so.toutiao.com/search?keyword=以色列少将被哈马斯武装人员俘虏)
-1. [以总理：出动全部力量摧毁哈马斯](https://so.toutiao.com/search?keyword=以总理：出动全部力量摧毁哈马斯)
 1. [中国留学生拍下以色列遭袭时画面](https://so.toutiao.com/search?keyword=中国留学生拍下以色列遭袭时画面)
-1. [以色列和巴勒斯坦的世仇是怎么来的](https://so.toutiao.com/search?keyword=以色列和巴勒斯坦的世仇是怎么来的)
-1. [哈马斯：突袭以色列得到伊朗支持](https://so.toutiao.com/search?keyword=哈马斯：突袭以色列得到伊朗支持)
-1. [老鼠回来发现家被偷了](https://so.toutiao.com/search?keyword=老鼠回来发现家被偷了)
+1. [以总理：出动全部力量摧毁哈马斯](https://so.toutiao.com/search?keyword=以总理：出动全部力量摧毁哈马斯)
 1. [网传傅艺伟30岁儿子高乐男去世](https://so.toutiao.com/search?keyword=网传傅艺伟30岁儿子高乐男去世)
-1. [哈马斯武装占领以军基地缴获装甲车](https://so.toutiao.com/search?keyword=哈马斯武装占领以军基地缴获装甲车)
+1. [以色列和巴勒斯坦的世仇是怎么来的](https://so.toutiao.com/search?keyword=以色列和巴勒斯坦的世仇是怎么来的)
+1. [哈马斯使用滑翔伞渗透袭击画面曝光](https://so.toutiao.com/search?keyword=哈马斯使用滑翔伞渗透袭击画面曝光)
+1. [老鼠回来发现家被偷了](https://so.toutiao.com/search?keyword=老鼠回来发现家被偷了)
+1. [货车停放10多天司机被发现早已身亡](https://so.toutiao.com/search?keyword=货车停放10多天司机被发现早已身亡)
+1. [哈马斯：突袭以色列得到伊朗支持](https://so.toutiao.com/search?keyword=哈马斯：突袭以色列得到伊朗支持)
+1. [以色列少将被哈马斯武装人员俘虏](https://so.toutiao.com/search?keyword=以色列少将被哈马斯武装人员俘虏)
+1. [欧盟总部大楼点亮以色列国旗](https://so.toutiao.com/search?keyword=欧盟总部大楼点亮以色列国旗)
+1. [外媒：哈马斯一领导人被以色列消灭](https://so.toutiao.com/search?keyword=外媒：哈马斯一领导人被以色列消灭)
+1. [媒体：以色列局势“史无前例”](https://so.toutiao.com/search?keyword=媒体：以色列局势“史无前例”)
 1. [外媒：以色列街头空无一人](https://so.toutiao.com/search?keyword=外媒：以色列街头空无一人)
+1. [以导弹瞬间夷平巴勒斯坦塔画面曝光](https://so.toutiao.com/search?keyword=以导弹瞬间夷平巴勒斯坦塔画面曝光)
+1. [在以色列华人：有人连夜购机票逃离](https://so.toutiao.com/search?keyword=在以色列华人：有人连夜购机票逃离)
+1. [男子攀爬大禹像被拽下后遭怒踹](https://so.toutiao.com/search?keyword=男子攀爬大禹像被拽下后遭怒踹)
+1. [巴以冲突已致双方超900人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超900人死亡)
+1. [巴西一男子被跳伞员击中头部身亡](https://so.toutiao.com/search?keyword=巴西一男子被跳伞员击中头部身亡)
+1. [亚运播报台工作人员高歌《真的爱你》](https://so.toutiao.com/search?keyword=亚运播报台工作人员高歌《真的爱你》)
+1. [官方回应女子探阴间主题酒店放棺材](https://so.toutiao.com/search?keyword=官方回应女子探阴间主题酒店放棺材)
+1. [螃蟹卡套路有多深](https://so.toutiao.com/search?keyword=螃蟹卡套路有多深)
+1. [李梦：赛前化妆美甲让我更专注](https://so.toutiao.com/search?keyword=李梦：赛前化妆美甲让我更专注)
+1. [埃及一警察枪杀两名以色列游客](https://so.toutiao.com/search?keyword=埃及一警察枪杀两名以色列游客)
+1. [中国工人抓拍到以军铁穹拦截火箭弹](https://so.toutiao.com/search?keyword=中国工人抓拍到以军铁穹拦截火箭弹)
+1. [救援专家披露蓝天救援队内部分裂问题](https://so.toutiao.com/search?keyword=救援专家披露蓝天救援队内部分裂问题)
+1. [全红婵一口气回答31个问题](https://so.toutiao.com/search?keyword=全红婵一口气回答31个问题)
+1. [以色列本古里安机场多个航班取消](https://so.toutiao.com/search?keyword=以色列本古里安机场多个航班取消)
+1. [准新娘状告理发店将头发多剪10厘米](https://so.toutiao.com/search?keyword=准新娘状告理发店将头发多剪10厘米)
+1. [男孩遭同学殴打致脑溢血 教育局发声](https://so.toutiao.com/search?keyword=男孩遭同学殴打致脑溢血+教育局发声)
 1. [情报强大的以色列为何“失明”了](https://so.toutiao.com/search?keyword=情报强大的以色列为何“失明”了)
 1. [美媒：制造业西迁中国内陆而非印度](https://so.toutiao.com/search?keyword=美媒：制造业西迁中国内陆而非印度)
-1. [欧盟总部大楼点亮以色列国旗](https://so.toutiao.com/search?keyword=欧盟总部大楼点亮以色列国旗)
-1. [货车停放10多天司机被发现早已身亡](https://so.toutiao.com/search?keyword=货车停放10多天司机被发现早已身亡)
-1. [媒体：以色列局势“史无前例”](https://so.toutiao.com/search?keyword=媒体：以色列局势“史无前例”)
+1. [弄丢涉密文件女孩哭诉 警察解困](https://so.toutiao.com/search?keyword=弄丢涉密文件女孩哭诉+警察解困)
+1. [珠海启动防风Ⅲ级应急响应](https://so.toutiao.com/search?keyword=珠海启动防风Ⅲ级应急响应)
+1. [老人田间触私拉电线身亡 警方未立案](https://so.toutiao.com/search?keyword=老人田间触私拉电线身亡+警方未立案)
+1. [放贷给恒大的银行高管会被处罚吗](https://so.toutiao.com/search?keyword=放贷给恒大的银行高管会被处罚吗)
+1. [1万元存单26年后取出3万多元](https://so.toutiao.com/search?keyword=1万元存单26年后取出3万多元)
+1. [阿富汗地震死亡超2400人](https://so.toutiao.com/search?keyword=阿富汗地震死亡超2400人)
+1. [媒体：紧盯靠X吃X式腐败精准打击](https://so.toutiao.com/search?keyword=媒体：紧盯靠X吃X式腐败精准打击)
+1. [杭州亚运会闭幕式](https://so.toutiao.com/search?keyword=杭州亚运会闭幕式)
+1. [旗手谢震业高举国旗入场](https://so.toutiao.com/search?keyword=旗手谢震业高举国旗入场)
+1. [亚运村里的“中国风”](https://so.toutiao.com/search?keyword=亚运村里的“中国风”)
+1. [上海女童网红海滩失踪事件搜救疑团](https://so.toutiao.com/search?keyword=上海女童网红海滩失踪事件搜救疑团)
+1. [闭幕式全场观众高歌《亚洲雄风》](https://so.toutiao.com/search?keyword=闭幕式全场观众高歌《亚洲雄风》)
+1. [纪委通报官员强制商家换拼音招牌](https://so.toutiao.com/search?keyword=纪委通报官员强制商家换拼音招牌)
+1. [哈马斯武装占领以军基地缴获装甲车](https://so.toutiao.com/search?keyword=哈马斯武装占领以军基地缴获装甲车)
 1. [巴以冲突对A股影响几何](https://so.toutiao.com/search?keyword=巴以冲突对A股影响几何)
-1. [女子失联半个多月后遗体在河里找到](https://so.toutiao.com/search?keyword=女子失联半个多月后遗体在河里找到)
 1. [银行回应“不扫码不给办业务”](https://so.toutiao.com/search?keyword=银行回应“不扫码不给办业务”)
 1. [厄瓜多尔总统撤换安全高官](https://so.toutiao.com/search?keyword=厄瓜多尔总统撤换安全高官)
 1. [狗狗误食3斤泡酒的杨梅醉倒](https://so.toutiao.com/search?keyword=狗狗误食3斤泡酒的杨梅醉倒)
 1. [画家史国良对话朝鲜功勋艺术家](https://so.toutiao.com/search?keyword=画家史国良对话朝鲜功勋艺术家)
 1. [WTT兰州站：孙颖莎获女单冠军](https://so.toutiao.com/search?keyword=WTT兰州站：孙颖莎获女单冠军)
-1. [全红婵一口气回答31个问题](https://so.toutiao.com/search?keyword=全红婵一口气回答31个问题)
 1. [台女大学生因质问赖清德弊案遭网暴](https://so.toutiao.com/search?keyword=台女大学生因质问赖清德弊案遭网暴)
 1. [中国银行：坚决拥护中央处分刘连舸](https://so.toutiao.com/search?keyword=中国银行：坚决拥护中央处分刘连舸)
 1. [谢震业：为中国田径事业责无旁贷](https://so.toutiao.com/search?keyword=谢震业：为中国田径事业责无旁贷)
 1. [李子柒商业版图盘点](https://so.toutiao.com/search?keyword=李子柒商业版图盘点)
 1. [杭州会申办奥运会吗？官方回应](https://so.toutiao.com/search?keyword=杭州会申办奥运会吗？官方回应)
 1. [《问心》有哪些看点](https://so.toutiao.com/search?keyword=《问心》有哪些看点)
-1. [中国工人抓拍到以军铁穹拦截火箭弹](https://so.toutiao.com/search?keyword=中国工人抓拍到以军铁穹拦截火箭弹)
-1. [救援专家披露蓝天救援队内部分裂问题](https://so.toutiao.com/search?keyword=救援专家披露蓝天救援队内部分裂问题)
 1. [执法局大队长被曝婚内出轨 纪委调查](https://so.toutiao.com/search?keyword=执法局大队长被曝婚内出轨+纪委调查)
 1. [女子帮离世闺蜜照护女儿14年](https://so.toutiao.com/search?keyword=女子帮离世闺蜜照护女儿14年)
 1. [研究称人造子宫人体试验或将启动](https://so.toutiao.com/search?keyword=研究称人造子宫人体试验或将启动)
-1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
-1. [螃蟹卡套路有多深](https://so.toutiao.com/search?keyword=螃蟹卡套路有多深)
 1. [摄像头正对举报箱 工作人员回应](https://so.toutiao.com/search?keyword=摄像头正对举报箱+工作人员回应)
 1. [姆巴佩在社媒祝贺李刚仁亚运会夺金](https://so.toutiao.com/search?keyword=姆巴佩在社媒祝贺李刚仁亚运会夺金)
 1. [韩国瑜会是促成蓝白合的关键先生吗](https://so.toutiao.com/search?keyword=韩国瑜会是促成蓝白合的关键先生吗)
@@ -61,13 +86,10 @@
 1. [韩旭本赛季不再返回纽约自由人](https://so.toutiao.com/search?keyword=韩旭本赛季不再返回纽约自由人)
 1. [纪委回应女子举报海南执法队长出轨](https://so.toutiao.com/search?keyword=纪委回应女子举报海南执法队长出轨)
 1. [目前无中国公民在阿富汗地震中伤亡](https://so.toutiao.com/search?keyword=目前无中国公民在阿富汗地震中伤亡)
-1. [放贷给恒大的银行高管会被处罚吗](https://so.toutiao.com/search?keyword=放贷给恒大的银行高管会被处罚吗)
 1. [普京71岁生日亲自给两国总统当司机](https://so.toutiao.com/search?keyword=普京71岁生日亲自给两国总统当司机)
 1. [今天21时16分寒露](https://so.toutiao.com/search?keyword=今天21时16分寒露)
-1. [男子攀爬大禹像被拽下后遭怒踹](https://so.toutiao.com/search?keyword=男子攀爬大禹像被拽下后遭怒踹)
 1. [杭州亚运会纪念短片：谢谢你杭州](https://so.toutiao.com/search?keyword=杭州亚运会纪念短片：谢谢你杭州)
 1. [惠若琪：中国女排非常需要这个冠军](https://so.toutiao.com/search?keyword=惠若琪：中国女排非常需要这个冠军)
-1. [寒露脚不露的真实原因](https://so.toutiao.com/search?keyword=寒露脚不露的真实原因)
 1. [俄“海燕”核动力导弹为何让美忌惮](https://so.toutiao.com/search?keyword=俄“海燕”核动力导弹为何让美忌惮)
 1. [巴以冲突将如何影响大宗商品](https://so.toutiao.com/search?keyword=巴以冲突将如何影响大宗商品)
 1. [阿富汗地震死亡超2000人](https://so.toutiao.com/search?keyword=阿富汗地震死亡超2000人)
@@ -123,7 +145,6 @@
 1. [巴以冲突当地华人讲述现状](https://so.toutiao.com/search?keyword=巴以冲突当地华人讲述现状)
 1. [男子杀人后自捅两刀伪装防卫判死缓](https://so.toutiao.com/search?keyword=男子杀人后自捅两刀伪装防卫判死缓)
 1. [多个省份晒出亚运奖牌榜](https://so.toutiao.com/search?keyword=多个省份晒出亚运奖牌榜)
-1. [哈马斯使用滑翔伞渗透袭击画面曝光](https://so.toutiao.com/search?keyword=哈马斯使用滑翔伞渗透袭击画面曝光)
 1. [以总理：将为“最黑暗的一天”报仇](https://so.toutiao.com/search?keyword=以总理：将为“最黑暗的一天”报仇)
 1. [亲历以色列进入“战争状态”第一天](https://so.toutiao.com/search?keyword=亲历以色列进入“战争状态”第一天)
 1. [黎巴嫩真主党称用火箭弹袭击以色列](https://so.toutiao.com/search?keyword=黎巴嫩真主党称用火箭弹袭击以色列)
@@ -205,7 +226,6 @@
 1. [韩旭：WNBA让我眼界开阔](https://so.toutiao.com/search?keyword=韩旭：WNBA让我眼界开阔)
 1. [在以中国工人：5年2次经历巴以冲突](https://so.toutiao.com/search?keyword=在以中国工人：5年2次经历巴以冲突)
 1. [韩旭：希望以平稳心态面对巴黎奥运](https://so.toutiao.com/search?keyword=韩旭：希望以平稳心态面对巴黎奥运)
-1. [老人田间触私拉电线身亡 警方未立案](https://so.toutiao.com/search?keyword=老人田间触私拉电线身亡+警方未立案)
 1. [男子趁高速免费最后20秒卡点出站](https://so.toutiao.com/search?keyword=男子趁高速免费最后20秒卡点出站)
 1. [中秋国庆假期最挤城市排行榜](https://so.toutiao.com/search?keyword=中秋国庆假期最挤城市排行榜)
 1. [西安警方发布协查通报 最高奖励5万](https://so.toutiao.com/search?keyword=西安警方发布协查通报+最高奖励5万)
