--- a/archives/toutiao-search/2023-10-08.md
+++ b/archives/toutiao-search/2023-10-08.md
@@ -1,55 +1,72 @@
 # 2023-10-08
 
-共 321 条
+共 334 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Oct 08 2023 22:00:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Oct 08 2023 23:00:53 GMT+0800 (China Standard Time) -->
 1. [杭州第19届亚运会正式闭幕](https://so.toutiao.com/search?keyword=杭州第19届亚运会正式闭幕)
-1. [女司机撞倒行人掏卫生巾为对方止血](https://so.toutiao.com/search?keyword=女司机撞倒行人掏卫生巾为对方止血)
+1. [杭州亚运闭幕式已诞生一项史上第一](https://so.toutiao.com/search?keyword=杭州亚运闭幕式已诞生一项史上第一)
 1. [201金收官 创造历史](https://so.toutiao.com/search?keyword=201金收官+创造历史)
-1. [以色列正式向哈马斯宣战](https://so.toutiao.com/search?keyword=以色列正式向哈马斯宣战)
-1. [准新娘长发被理发师剪至齐肩索赔8500](https://so.toutiao.com/search?keyword=准新娘长发被理发师剪至齐肩索赔8500)
-1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
 1. [李盈莹因膝盖不能弯曲下不了领奖台](https://so.toutiao.com/search?keyword=李盈莹因膝盖不能弯曲下不了领奖台)
-1. [女子失联半个多月后遗体在河里找到](https://so.toutiao.com/search?keyword=女子失联半个多月后遗体在河里找到)
-1. [寒露脚不露的真实原因](https://so.toutiao.com/search?keyword=寒露脚不露的真实原因)
+1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
+1. [巴以冲突当地华人讲述现状](https://so.toutiao.com/search?keyword=巴以冲突当地华人讲述现状)
+1. [女司机撞倒行人掏卫生巾为对方止血](https://so.toutiao.com/search?keyword=女司机撞倒行人掏卫生巾为对方止血)
+1. [准新娘长发被理发师剪至齐肩索赔8500](https://so.toutiao.com/search?keyword=准新娘长发被理发师剪至齐肩索赔8500)
+1. [以色列正式向哈马斯宣战](https://so.toutiao.com/search?keyword=以色列正式向哈马斯宣战)
 1. [河南龙头房企否认破产传闻](https://so.toutiao.com/search?keyword=河南龙头房企否认破产传闻)
-1. [以色列遭大规模火箭弹袭击视频曝光](https://so.toutiao.com/search?keyword=以色列遭大规模火箭弹袭击视频曝光)
 1. [以色列此次遇袭为何伤亡惨重](https://so.toutiao.com/search?keyword=以色列此次遇袭为何伤亡惨重)
-1. [中国留学生拍下以色列遭袭时画面](https://so.toutiao.com/search?keyword=中国留学生拍下以色列遭袭时画面)
+1. [以色列遭大规模火箭弹袭击视频曝光](https://so.toutiao.com/search?keyword=以色列遭大规模火箭弹袭击视频曝光)
+1. [母女驾车去看外婆回程落水双双溺亡](https://so.toutiao.com/search?keyword=母女驾车去看外婆回程落水双双溺亡)
+1. [欧盟总部大楼点亮以色列国旗](https://so.toutiao.com/search?keyword=欧盟总部大楼点亮以色列国旗)
 1. [以总理：出动全部力量摧毁哈马斯](https://so.toutiao.com/search?keyword=以总理：出动全部力量摧毁哈马斯)
+1. [媒体：以色列局势“史无前例”](https://so.toutiao.com/search?keyword=媒体：以色列局势“史无前例”)
 1. [网传傅艺伟30岁儿子高乐男去世](https://so.toutiao.com/search?keyword=网传傅艺伟30岁儿子高乐男去世)
-1. [以色列和巴勒斯坦的世仇是怎么来的](https://so.toutiao.com/search?keyword=以色列和巴勒斯坦的世仇是怎么来的)
+1. [外媒：哈马斯一领导人被以色列消灭](https://so.toutiao.com/search?keyword=外媒：哈马斯一领导人被以色列消灭)
+1. [外媒：以色列街头空无一人](https://so.toutiao.com/search?keyword=外媒：以色列街头空无一人)
+1. [杭州亚运会闭幕式再现《亚洲雄风》](https://so.toutiao.com/search?keyword=杭州亚运会闭幕式再现《亚洲雄风》)
+1. [以导弹瞬间夷平巴勒斯坦塔画面曝光](https://so.toutiao.com/search?keyword=以导弹瞬间夷平巴勒斯坦塔画面曝光)
+1. [中国银行：坚决拥护中央处分刘连舸](https://so.toutiao.com/search?keyword=中国银行：坚决拥护中央处分刘连舸)
+1. [官方回应女子探阴间主题酒店放棺材](https://so.toutiao.com/search?keyword=官方回应女子探阴间主题酒店放棺材)
 1. [哈马斯使用滑翔伞渗透袭击画面曝光](https://so.toutiao.com/search?keyword=哈马斯使用滑翔伞渗透袭击画面曝光)
-1. [老鼠回来发现家被偷了](https://so.toutiao.com/search?keyword=老鼠回来发现家被偷了)
 1. [货车停放10多天司机被发现早已身亡](https://so.toutiao.com/search?keyword=货车停放10多天司机被发现早已身亡)
+1. [亚运闭幕式科技与艺术之美太赞了](https://so.toutiao.com/search?keyword=亚运闭幕式科技与艺术之美太赞了)
+1. [螃蟹卡套路有多深](https://so.toutiao.com/search?keyword=螃蟹卡套路有多深)
+1. [埃及一警察枪杀两名以色列游客](https://so.toutiao.com/search?keyword=埃及一警察枪杀两名以色列游客)
+1. [在以色列华人：有人连夜购机票逃离](https://so.toutiao.com/search?keyword=在以色列华人：有人连夜购机票逃离)
+1. [湖南多地披露编外人员清退工作](https://so.toutiao.com/search?keyword=湖南多地披露编外人员清退工作)
+1. [普京71岁生日亲自给两国总统当司机](https://so.toutiao.com/search?keyword=普京71岁生日亲自给两国总统当司机)
+1. [救援专家披露蓝天救援队内部分裂问题](https://so.toutiao.com/search?keyword=救援专家披露蓝天救援队内部分裂问题)
+1. [准新娘状告理发店将头发多剪10厘米](https://so.toutiao.com/search?keyword=准新娘状告理发店将头发多剪10厘米)
+1. [全红婵一口气回答31个问题](https://so.toutiao.com/search?keyword=全红婵一口气回答31个问题)
+1. [男子因出餐慢冲进柜台殴打店长](https://so.toutiao.com/search?keyword=男子因出餐慢冲进柜台殴打店长)
+1. [老鼠回来发现家被偷了](https://so.toutiao.com/search?keyword=老鼠回来发现家被偷了)
+1. [小米高级副总裁张峰将离职](https://so.toutiao.com/search?keyword=小米高级副总裁张峰将离职)
+1. [寒露脚不露的真实原因](https://so.toutiao.com/search?keyword=寒露脚不露的真实原因)
+1. [情报强大的以色列为何“失明”了](https://so.toutiao.com/search?keyword=情报强大的以色列为何“失明”了)
+1. [中国工人抓拍到以军铁穹拦截火箭弹](https://so.toutiao.com/search?keyword=中国工人抓拍到以军铁穹拦截火箭弹)
+1. [专家：巴以“攻守易位”极为罕见](https://so.toutiao.com/search?keyword=专家：巴以“攻守易位”极为罕见)
+1. [女方曝与罗中旭交往细节](https://so.toutiao.com/search?keyword=女方曝与罗中旭交往细节)
+1. [美媒：制造业西迁中国内陆而非印度](https://so.toutiao.com/search?keyword=美媒：制造业西迁中国内陆而非印度)
+1. [交通部门调整运输方案应对台风小犬](https://so.toutiao.com/search?keyword=交通部门调整运输方案应对台风小犬)
+1. [以色列坦克疑遭摧毁 士兵被拖出](https://so.toutiao.com/search?keyword=以色列坦克疑遭摧毁+士兵被拖出)
+1. [“折叠男孩”成功拆除头盆环](https://so.toutiao.com/search?keyword=“折叠男孩”成功拆除头盆环)
+1. [老人田间触私拉电线身亡 警方未立案](https://so.toutiao.com/search?keyword=老人田间触私拉电线身亡+警方未立案)
+1. [中国“双节”文旅市场活力满满](https://so.toutiao.com/search?keyword=中国“双节”文旅市场活力满满)
+1. [女篮队员李梦回应带妆比赛](https://so.toutiao.com/search?keyword=女篮队员李梦回应带妆比赛)
+1. [弄丢涉密文件女孩哭诉 警察解困](https://so.toutiao.com/search?keyword=弄丢涉密文件女孩哭诉+警察解困)
+1. [女子失联半个多月后遗体在河里找到](https://so.toutiao.com/search?keyword=女子失联半个多月后遗体在河里找到)
+1. [中国留学生拍下以色列遭袭时画面](https://so.toutiao.com/search?keyword=中国留学生拍下以色列遭袭时画面)
+1. [以色列和巴勒斯坦的世仇是怎么来的](https://so.toutiao.com/search?keyword=以色列和巴勒斯坦的世仇是怎么来的)
 1. [哈马斯：突袭以色列得到伊朗支持](https://so.toutiao.com/search?keyword=哈马斯：突袭以色列得到伊朗支持)
 1. [以色列少将被哈马斯武装人员俘虏](https://so.toutiao.com/search?keyword=以色列少将被哈马斯武装人员俘虏)
-1. [欧盟总部大楼点亮以色列国旗](https://so.toutiao.com/search?keyword=欧盟总部大楼点亮以色列国旗)
-1. [外媒：哈马斯一领导人被以色列消灭](https://so.toutiao.com/search?keyword=外媒：哈马斯一领导人被以色列消灭)
-1. [媒体：以色列局势“史无前例”](https://so.toutiao.com/search?keyword=媒体：以色列局势“史无前例”)
-1. [外媒：以色列街头空无一人](https://so.toutiao.com/search?keyword=外媒：以色列街头空无一人)
-1. [以导弹瞬间夷平巴勒斯坦塔画面曝光](https://so.toutiao.com/search?keyword=以导弹瞬间夷平巴勒斯坦塔画面曝光)
-1. [在以色列华人：有人连夜购机票逃离](https://so.toutiao.com/search?keyword=在以色列华人：有人连夜购机票逃离)
 1. [男子攀爬大禹像被拽下后遭怒踹](https://so.toutiao.com/search?keyword=男子攀爬大禹像被拽下后遭怒踹)
 1. [巴以冲突已致双方超900人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超900人死亡)
 1. [巴西一男子被跳伞员击中头部身亡](https://so.toutiao.com/search?keyword=巴西一男子被跳伞员击中头部身亡)
 1. [亚运播报台工作人员高歌《真的爱你》](https://so.toutiao.com/search?keyword=亚运播报台工作人员高歌《真的爱你》)
-1. [官方回应女子探阴间主题酒店放棺材](https://so.toutiao.com/search?keyword=官方回应女子探阴间主题酒店放棺材)
-1. [螃蟹卡套路有多深](https://so.toutiao.com/search?keyword=螃蟹卡套路有多深)
 1. [李梦：赛前化妆美甲让我更专注](https://so.toutiao.com/search?keyword=李梦：赛前化妆美甲让我更专注)
-1. [埃及一警察枪杀两名以色列游客](https://so.toutiao.com/search?keyword=埃及一警察枪杀两名以色列游客)
-1. [中国工人抓拍到以军铁穹拦截火箭弹](https://so.toutiao.com/search?keyword=中国工人抓拍到以军铁穹拦截火箭弹)
-1. [救援专家披露蓝天救援队内部分裂问题](https://so.toutiao.com/search?keyword=救援专家披露蓝天救援队内部分裂问题)
-1. [全红婵一口气回答31个问题](https://so.toutiao.com/search?keyword=全红婵一口气回答31个问题)
 1. [以色列本古里安机场多个航班取消](https://so.toutiao.com/search?keyword=以色列本古里安机场多个航班取消)
-1. [准新娘状告理发店将头发多剪10厘米](https://so.toutiao.com/search?keyword=准新娘状告理发店将头发多剪10厘米)
 1. [男孩遭同学殴打致脑溢血 教育局发声](https://so.toutiao.com/search?keyword=男孩遭同学殴打致脑溢血+教育局发声)
-1. [情报强大的以色列为何“失明”了](https://so.toutiao.com/search?keyword=情报强大的以色列为何“失明”了)
-1. [美媒：制造业西迁中国内陆而非印度](https://so.toutiao.com/search?keyword=美媒：制造业西迁中国内陆而非印度)
-1. [弄丢涉密文件女孩哭诉 警察解困](https://so.toutiao.com/search?keyword=弄丢涉密文件女孩哭诉+警察解困)
 1. [珠海启动防风Ⅲ级应急响应](https://so.toutiao.com/search?keyword=珠海启动防风Ⅲ级应急响应)
-1. [老人田间触私拉电线身亡 警方未立案](https://so.toutiao.com/search?keyword=老人田间触私拉电线身亡+警方未立案)
 1. [放贷给恒大的银行高管会被处罚吗](https://so.toutiao.com/search?keyword=放贷给恒大的银行高管会被处罚吗)
 1. [1万元存单26年后取出3万多元](https://so.toutiao.com/search?keyword=1万元存单26年后取出3万多元)
 1. [阿富汗地震死亡超2400人](https://so.toutiao.com/search?keyword=阿富汗地震死亡超2400人)
@@ -68,7 +85,6 @@
 1. [画家史国良对话朝鲜功勋艺术家](https://so.toutiao.com/search?keyword=画家史国良对话朝鲜功勋艺术家)
 1. [WTT兰州站：孙颖莎获女单冠军](https://so.toutiao.com/search?keyword=WTT兰州站：孙颖莎获女单冠军)
 1. [台女大学生因质问赖清德弊案遭网暴](https://so.toutiao.com/search?keyword=台女大学生因质问赖清德弊案遭网暴)
-1. [中国银行：坚决拥护中央处分刘连舸](https://so.toutiao.com/search?keyword=中国银行：坚决拥护中央处分刘连舸)
 1. [谢震业：为中国田径事业责无旁贷](https://so.toutiao.com/search?keyword=谢震业：为中国田径事业责无旁贷)
 1. [李子柒商业版图盘点](https://so.toutiao.com/search?keyword=李子柒商业版图盘点)
 1. [杭州会申办奥运会吗？官方回应](https://so.toutiao.com/search?keyword=杭州会申办奥运会吗？官方回应)
@@ -86,7 +102,6 @@
 1. [韩旭本赛季不再返回纽约自由人](https://so.toutiao.com/search?keyword=韩旭本赛季不再返回纽约自由人)
 1. [纪委回应女子举报海南执法队长出轨](https://so.toutiao.com/search?keyword=纪委回应女子举报海南执法队长出轨)
 1. [目前无中国公民在阿富汗地震中伤亡](https://so.toutiao.com/search?keyword=目前无中国公民在阿富汗地震中伤亡)
-1. [普京71岁生日亲自给两国总统当司机](https://so.toutiao.com/search?keyword=普京71岁生日亲自给两国总统当司机)
 1. [今天21时16分寒露](https://so.toutiao.com/search?keyword=今天21时16分寒露)
 1. [杭州亚运会纪念短片：谢谢你杭州](https://so.toutiao.com/search?keyword=杭州亚运会纪念短片：谢谢你杭州)
 1. [惠若琪：中国女排非常需要这个冠军](https://so.toutiao.com/search?keyword=惠若琪：中国女排非常需要这个冠军)
@@ -142,7 +157,6 @@
 1. [媒体：“蓝白合”脚步加快](https://so.toutiao.com/search?keyword=媒体：“蓝白合”脚步加快)
 1. [保安疑因举报女子酒店卖淫被辞退](https://so.toutiao.com/search?keyword=保安疑因举报女子酒店卖淫被辞退)
 1. [上海4岁女童海边失踪案梳理](https://so.toutiao.com/search?keyword=上海4岁女童海边失踪案梳理)
-1. [巴以冲突当地华人讲述现状](https://so.toutiao.com/search?keyword=巴以冲突当地华人讲述现状)
 1. [男子杀人后自捅两刀伪装防卫判死缓](https://so.toutiao.com/search?keyword=男子杀人后自捅两刀伪装防卫判死缓)
 1. [多个省份晒出亚运奖牌榜](https://so.toutiao.com/search?keyword=多个省份晒出亚运奖牌榜)
 1. [以总理：将为“最黑暗的一天”报仇](https://so.toutiao.com/search?keyword=以总理：将为“最黑暗的一天”报仇)
@@ -153,7 +167,6 @@
 1. [惠州一项目五折卖房被停业整顿](https://so.toutiao.com/search?keyword=惠州一项目五折卖房被停业整顿)
 1. [杭州亚运会迎来代表团返程高峰](https://so.toutiao.com/search?keyword=杭州亚运会迎来代表团返程高峰)
 1. [文物说节气：寒露](https://so.toutiao.com/search?keyword=文物说节气：寒露)
-1. [女方曝与罗中旭交往细节](https://so.toutiao.com/search?keyword=女方曝与罗中旭交往细节)
 1. [俄哈乌元首出席天然气项目启动仪式](https://so.toutiao.com/search?keyword=俄哈乌元首出席天然气项目启动仪式)
 1. [舰船领域专家潘镜芙院士逝世](https://so.toutiao.com/search?keyword=舰船领域专家潘镜芙院士逝世)
 1. [珠海全市中小学幼儿园停课](https://so.toutiao.com/search?keyword=珠海全市中小学幼儿园停课)
